Modifiche Interfaccia - cambiato font - aggiunto baloon tip per invio file (DA SISTEMARE)

--- a/PDSProject/PDSProject.csproj
+++ b/PDSProject/PDSProject.csproj
@@ -202,5 +202,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\System\edit_white.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
