--- a/PDSProject/packages.config
+++ b/PDSProject/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Windows.Shell" version="3.0.1.0" targetFramework="net471" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Json" version="4.3.0" targetFramework="net471" />
   <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net471" />
 </packages>
