--- a/PDSProject/PDSProject.csproj
+++ b/PDSProject/PDSProject.csproj
@@ -110,6 +110,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FileRecive.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="MyTCPSender.cs" />
     <Compile Include="MyUDPListener.cs" />
